--- a/to-do-list/src/Calendar.css
+++ b/to-do-list/src/Calendar.css
@@ -136,3 +136,9 @@
     background-color: transparent;
 
 }
+
+.edit {
+  background: hsla(216, 93%, 48%, 0.265);
+  border: 1px solid white;
+  color: white;
+}
